# RadarProject

./: .gitignore  CMakeLists.txt  GuiPanel.cpp  MySvmClass.cpp  ParamClass.cpp  README.md  RadarDataCube.cpp  imagepanel.cpp  svm.cpp
01_RadarConf/AWR1843/: README.md  mmw_example.c
01_RadarConf/DCA1000/: rf_api.h
03_DataSet/: testData.txt  trainData.txt
03_DataSet/modifyVector-yw/: trainData.txt
03_DataSet/modifyVector-yy/: testData.txt  trainData.txt
03_DataSet/now_konw_to_new/: trainData.txt
03_DataSet/origin/: trainData.txt
04_ConfigFile/: config.ini
RadarConf/AWR1642/: mmwaveconfig.txt  trace.txt
RadarConf/AWR1843/: trace.txt
RadarConf/DCA1000/: DCA01000EVMControlDemo.cpp
include/: GuiPanel.h  MySvmClass.h  ParamClass.h  RadarDataCube.h  wxImagePanel.h
